logo overflow fix

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -62,7 +62,7 @@
   
   /* main logo  */
   #navigation .imgLogo{
-    width: 100%;
+    height: 60px;
     transition: 1s;
   }
   #navigation .sidebarLogo{
